openmetadata-docs/content/v1.5.x/deployment/security/auth0/auth-code-flow.md
---
title: Auth0 SSO for Docker
slug: /deployment/security/auth0/auth-code-flow
collate: false
---

# Auth Code Flow

### Step 1: Create a New Application

- Once you are on the Dashboard page, click on `Applications > Applications` available on the left-hand side panel.

{% image 
src="/images/v1.5/deployment/security/auth0/create-new-app-1.png" 
alt="create-app" /%}

- Click on `Create Application`.

{% image 
src="/images/v1.5/deployment/security/auth0/create-new-app-2.png" 
alt="create-app" /%}

- Enter the Application name.
- Choose an application type and click on `Create`.

{% image 
src="/images/v1.5/deployment/security/auth0/auth-code-flow-1.png" 
alt="create-app" /%}

### Step 2: Where to Find the Credentials

- Navigate to the Settings tab. 
- You will find your `Client ID` and `Client Secret`.

{% image 
src="/images/v1.5/deployment/security/auth0/auth-code-flow-2.png" 
alt="credentials" /%}